syntax = "proto3";

// import "google/protobuf/any.proto";

package cache.proto;

option go_package = ".;cachepb";

service Cache {
  // Create cache instance
  rpc InstanceCreate(InstanceCreateRequest) returns (InstanceCreateResponse);
  // List cache instances
  rpc InstancesList(InstancesListRequest) returns (InstancesListResponse);
  // List the cache specific Intents
  rpc InstanceDelete(InstanceDeleteRequest) returns (InstanceDeleteResponse);
  // Delete a cache instance specific intent
  rpc InstanceIntentsList(InstanceIntentsListRequest)
      returns (InstanceIntentsListResponse);
  rpc InstanceIntentsGetAll(InstanceIntentGetAllRequest)
      returns (stream InstanceIntentGetResponse);
  // Get a cache specific Intent
  rpc InstanceIntentGet(InstanceIntentGetRequest)
      returns (InstanceIntentGetResponse);
  // Check existence of a cache specifc intent
  rpc InstanceIntentExists(InstanceIntentExistsRequest)
      returns (InstanceIntentExistsResponse);
  // Modify a cache specifc intent (add / modify)
  rpc InstanceIntentModify(InstanceIntentModifyRequest)
      returns (InstanceIntentModifyResponse);
  // Delete a cache instance
  rpc InstanceIntentDelete(InstanceIntentDeleteRequest)
      returns (InstanceIntentDeleteResponse);
}
message InstanceDeleteRequest { string cache_instance_name = 1; }

message InstanceDeleteResponse {}

message InstanceIntentDeleteRequest {
  string cache_instance_name = 1;
  string intent_name         = 2;
  bool   IgnoreNonExisting   = 3;
}

message InstanceIntentDeleteResponse {}

message InstanceCreateRequest { string cache_instance_name = 1; }

message InstanceCreateResponse {}

message InstancesListRequest {}

message InstancesListResponse { repeated string cache_instances = 1; }

message InstanceIntentsListRequest { string cache_instance_name = 1; }

message InstanceIntentsListResponse { repeated string intents = 1; }

message InstanceIntentGetRequest {
  string cache_instance_name = 1;
  string intent_name         = 2;
}

message InstanceIntentGetResponse {
  string intent_name = 1;
  bytes  intent      = 2;
}

message InstanceIntentExistsRequest {
  string cache_instance_name = 1;
  string intent_name         = 2;
}

message InstanceIntentExistsResponse { bool exists = 1; }

message InstanceIntentModifyRequest {
  string cache_instance_name = 1;
  string intent_name         = 2;
  bytes  intent              = 3;
}

message InstanceIntentModifyResponse {}

message InstanceIntentGetAllRequest {
  string          cache_instance_name = 1;
  repeated string exclude_intents     = 2;
}
